# SLHDSA256s

./: .gitlab-ci.yml  CLAUDE.md  Cargo.toml  NEWS  PQC_KEY_GENERATION.md  README.md  automation_scripts.sh  openpgp-policy.toml
.cargo/: config.toml
autocrypt/: Cargo.toml
buffered-reader/: Cargo.toml
ipc/: Cargo.toml
lib/: Cargo.toml  README.md
lib/src/: best_userid.rs  builder.rs  cert.rs  compat.rs  config.rs  consts.rs  decrypt.rs  encrypt.rs  errors.rs  inspect.rs  key.rs  keys.rs  lib.rs  list.rs  lookup.rs  password_cache.rs  pki.rs  prompt.rs  provenance.rs  sign.rs  time.rs  transitional.rs  types.rs  verify.rs
lib/src/cert/: import.rs
lib/src/config/: cipher_suite.rs  expiration.rs  profile.rs  toml_edit_tree.rs  verbosity.rs
lib/src/key/: import.rs
lib/src/packet/: dump.rs
lib/src/pki/: certify.rs
lib/src/prompt/: check.rs
lib/src/transitional/: concise_human_readable.rs  macros.rs  output.rs  stdin.rs
lib/src/transitional/output/: cert.rs  hint.rs  pluralize.rs  print_path.rs
lib/src/types/: as_ref.rs  cert_designator.rs  compression_mode.rs  convert.rs  encrypt_purpose.rs  hash_mode.rs  import_stats.rs  part_file_writer.rs  preferred_userid.rs  query.rs  session_key.rs  trust_amount.rs  trust_threshold.rs
net/: Cargo.toml
openpgp/: Cargo.toml  NEWS
openpgp/examples/: slhdsa_mlkem_demo.rs
openpgp/src/: cert.rs  policy.rs  tests.rs
openpgp/src/cert/: builder.rs
openpgp/src/crypto/: key.rs  mod.rs
openpgp/src/crypto/backend/openssl/: asymmetric.rs
openpgp/src/packet/: pkesk.rs
openpgp/src/packet/key/: v4.rs  v6.rs
openpgp/src/parse/: stream.rs
openpgp/src/serialize/: stream.rs
openpgp/tests/: secret-leak-detector.rs
src/cli/: toc.rs
tests/integration/: sq_key_revoke.rs  sq_key_subkey.rs  sq_key_subkey_password.rs
tool/: Cargo.toml  Containerfile  NEWS  README.md
tool/src/: commands.rs  common.rs  config.rs  main.rs  output.rs  sq.rs  utils.rs
tool/src/cli/: config.rs  decrypt.rs  encrypt.rs  inspect.rs  key.rs  keyring.rs  mod.rs  packet.rs  pki.rs  sign.rs  types.rs  verify.rs
tool/src/cli/config/: get.rs  set.rs
tool/src/cli/key/: approvals.rs  generate.rs  rotate.rs  userid.rs
tool/src/cli/key/subkey/: add.rs  bind.rs
tool/src/cli/network/: keyserver.rs  search.rs
tool/src/cli/packet/: armor.rs  dearmor.rs
tool/src/cli/pki/: link.rs  path.rs  vouch.rs
tool/src/cli/pki/vouch/: add.rs  authorize.rs
tool/src/cli/types/: cert_designator.rs  expiration.rs  key_designator.rs  paths.rs  profile.rs  signature_notations.rs  time.rs  userid_designator.rs
tool/src/commands/: autocrypt.rs  cert.rs  config.rs  decrypt.rs  download.rs  encrypt.rs  inspect.rs  key.rs  keyring.rs  network.rs  packet.rs  pki.rs  sign.rs  toc.rs  verify.rs  version.rs
tool/src/commands/cert/: export.rs  import.rs  lint.rs
tool/src/commands/config/: inspect.rs
tool/src/commands/config/inspect/: policy.rs
tool/src/commands/key/: approvals.rs  delete.rs  export.rs  generate.rs  import.rs  list.rs  password.rs  revoke.rs  rotate.rs  userid.rs
tool/src/commands/key/subkey/: add.rs  bind.rs  delete.rs  export.rs  password.rs  revoke.rs
tool/src/commands/packet/: armor.rs  dearmor.rs  dump.rs
tool/src/commands/pki/: link.rs  path.rs  vouch.rs
tool/src/commands/pki/link/: list.rs
tool/src/commands/pki/vouch/: add.rs  authorize.rs  list.rs  replay.rs
tool/src/commands/sign/: merge_signatures.rs
tool/src/common/: cert_designator.rs  file.rs  key.rs  password.rs  pki.rs  revoke.rs  ui.rs  userid.rs
tool/src/common/key/: delete.rs  expire.rs  password.rs
tool/src/common/pki/: authenticate.rs  certify.rs  list.rs  output.rs  replay.rs
tool/src/common/pki/output/: concise_human_readable.rs  list.rs
tool/src/common/types/: userid_designator.rs
tool/src/output/: decrypt.rs  encrypt.rs  import.rs  sanitize.rs  sign.rs  verify.rs
tool/src/output/cert/: import.rs
tool/src/output/key/: import.rs
tool/tests/integration/: common.rs  sq_autocrypt.rs  sq_cert_export.rs  sq_cert_import.rs  sq_cert_lint.rs  sq_cert_list.rs  sq_decrypt.rs  sq_encrypt.rs  sq_key_approvals_update.rs  sq_key_delete.rs  sq_key_expire.rs  sq_key_generate.rs  sq_key_import_export.rs  sq_key_password.rs  sq_key_revoke.rs  sq_key_rotate.rs  sq_key_subkey.rs  sq_key_subkey_bind.rs  sq_key_subkey_delete.rs  sq_key_subkey_expire.rs  sq_key_subkey_export.rs  sq_key_subkey_password.rs  sq_key_userid.rs  sq_key_userid_revoke.rs  sq_keyring_filter.rs  sq_keyring_merge.rs  sq_packet_decrypt.rs  sq_packet_dump.rs  sq_pki.rs  sq_pki_link.rs  sq_pki_link_authorize.rs  sq_pki_vouch_add.rs  sq_pki_vouch_authorize.rs  sq_sign.rs  sq_verify.rs
