[workspace]
resolver = "2"
members = [
    "lib",
    "tool",
]

[workspace.package]
authors = [
    "Azul <azul@sequoia-pgp.org>",
    "Heiko Schaefer <heiko@schaefer.name>",
    "Igor Matuszewski <igor@sequoia-pgp.org>",
    "Justus Winter <justus@sequoia-pgp.org>",
    "Kai Michaelis <kai@sequoia-pgp.org>",
    "Lars Wirzenius <liw@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
    "Nora Widdecke <nora@sequoia-pgp.org>",
    "Wiktor Kwapisiewicz <wiktor@sequoia-pgp.org>",
]
repository = "https://gitlab.com/sequoia-pgp/sequoia-sq"
readme = "README.md"
license = "LGPL-2.0-or-later"
edition = "2021"
rust-version = "1.79"

[profile.release]
debug = true

# The Rust Crypto crates are *very* slow when compiled without any
# optimizations.  Turn on some optimizations.
[profile.dev.package.aes]
opt-level = 2
[profile.dev.package.aes-gcm]
opt-level = 2
[profile.dev.package.argon2]
opt-level = 2
[profile.dev.package.blake2]
opt-level = 2
[profile.dev.package.block-padding]
opt-level = 2
[profile.dev.package.blowfish]
opt-level = 2
[profile.dev.package.camellia]
opt-level = 2
[profile.dev.package.cast5]
opt-level = 2
[profile.dev.package.cipher]
opt-level = 2
[profile.dev.package.cfb-mode]
opt-level = 2
[profile.dev.package.des]
opt-level = 2
[profile.dev.package.digest]
opt-level = 2
[profile.dev.package.dsa]
opt-level = 2
[profile.dev.package.eax]
opt-level = 2
[profile.dev.package.ecb]
opt-level = 2
[profile.dev.package.ecdsa]
opt-level = 2
[profile.dev.package.ed25519]
opt-level = 2
[profile.dev.package.ed25519-dalek]
opt-level = 2
[profile.dev.package.idea]
opt-level = 2
[profile.dev.package.keccak]
opt-level = 2
[profile.dev.package.md-5]
opt-level = 2
[profile.dev.package.num-bigint-dig]
opt-level = 2
[profile.dev.package.ocb3]
opt-level = 2
[profile.dev.package.p256]
opt-level = 2
[profile.dev.package.p384]
opt-level = 2
[profile.dev.package.p521]
opt-level = 2
[profile.dev.package.ripemd]
opt-level = 2
[profile.dev.package.rsa]
opt-level = 2
[profile.dev.package.sha2]
opt-level = 2
[profile.dev.package.sha3]
opt-level = 2
[profile.dev.package.twofish]
opt-level = 2
[profile.dev.package.x25519-dalek]
opt-level = 2
