[package]
name = "sequoia"
description = "A high-Level library for Sequoia PGP"
version = "0.1.0"
documentation = "https://docs.rs/sequoia"
homepage = "https://sequoia-pgp.org/"
keywords = ["cryptography", "openpgp", "pgp", "encryption", "signing"]
categories = ["cryptography", "authentication"]
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[badges]
gitlab = { repository = "sequoia-pgp/sequoia-sq" }
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0.18"
dirs = "5"
filetime = "0.2"
rusqlite = ">=0.31, <0.33"
sequoia-cert-store = { version = "0.7", default-features = false }
sequoia-directories = "0.1"
sequoia-ipc = { version = "0.36", default-features = false }
sequoia-openpgp = { version = "2", default-features = false, features = ["compression"] }
sequoia-wot = { version = "0.15", default-features = false }
tempfile = "3.1"
thiserror = "1"

[build-dependencies]

[dev-dependencies]
tempfile = "3.1"

[target.'cfg(not(windows))'.dev-dependencies]
# Enables a crypto backend for the tests:
sequoia-openpgp = { version = "2", default-features = false, features = ["crypto-nettle", "__implicit-crypto-backend-for-tests"]  }

[target.'cfg(windows)'.dev-dependencies]
# Enables a crypto backend for the tests:
sequoia-openpgp = { version = "2", default-features = false, features = ["crypto-cng", "__implicit-crypto-backend-for-tests"] }

[package.metadata.docs.rs]
# Enables a crypto backend for the docs.rs generation:
features = ["sequoia-openpgp/default"]
