[package]
name = "sequoia"
description = "A high-Level library for Sequoia PGP"
version = "0.1.0"
documentation = "https://docs.rs/sequoia"
homepage = "https://sequoia-pgp.org/"
keywords = ["cryptography", "openpgp", "pgp", "encryption", "signing"]
categories = ["cryptography", "authentication"]
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[badges]
gitlab = { repository = "sequoia-pgp/sequoia-sq" }
maintenance = { status = "actively-developed" }

[dependencies]
aho-corasick = "1"
anyhow = "1.0.18"
chrono = "0.4.38"
clap = { version = "4.5", optional = true }
dirs = "5"
filetime = "0.2"
humantime = "2"
once_cell = "1.17"
regex = "1"
rusqlite = ">=0.31, <0.33"
sequoia-cert-store = { version = "0.7", default-features = false }
sequoia-directories = "0.1"
sequoia-keystore = { version = "0.7" }
sequoia-ipc = { version = "0.36", default-features = false }
sequoia-net = { version = "0.30", default-features = false }
sequoia-openpgp = { version = "2", default-features = false, features = ["compression"] }
sequoia-policy-config = "0.8"
sequoia-wot = { version = "0.15", default-features = false }
tempfile = "3.1"
thiserror = { version = ">=1, <3" }
toml_edit = { version = "0.22", default-features = false, features = ["display", "parse"] }

[build-dependencies]

[dev-dependencies]
tempfile = "3.1"

[features]
default = [
    "crypto-nettle",
]
crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
crypto-openssl = ["sequoia-openpgp/crypto-openssl"]
crypto-botan = ["sequoia-openpgp/crypto-botan"]
crypto-botan2 = ["sequoia-openpgp/crypto-botan2"]
crypto-cng = ["sequoia-openpgp/crypto-cng"]
crypto-rust = ["sequoia-openpgp/crypto-rust"]

clap = ["dep:clap"]

[target.'cfg(not(windows))'.dev-dependencies]
# Enables a crypto backend for the tests:
sequoia-openpgp = { version = "2", default-features = false, features = ["crypto-nettle", "__implicit-crypto-backend-for-tests"]  }

[target.'cfg(windows)'.dev-dependencies]
# Enables a crypto backend for the tests:
sequoia-openpgp = { version = "2", default-features = false, features = ["crypto-cng", "__implicit-crypto-backend-for-tests"] }

[package.metadata.docs.rs]
# Enables a crypto backend for the docs.rs generation:
features = ["sequoia-openpgp/default"]
