[package]
name = "sequoia-sq"
description = "Command-line frontends for Sequoia"
version = "1.3.1"
build = "build.rs"
documentation = "https://docs.rs/sequoia-sq"
homepage = "https://sequoia-pgp.org/"
keywords = ["cryptography", "openpgp", "pgp", "encryption", "signing"]
categories = ["cryptography", "authentication", "command-line-utilities"]
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[badges]
gitlab = { repository = "sequoia-pgp/sequoia-sq" }
maintenance = { status = "actively-developed" }

[dependencies]
aho-corasick = "1"
dirs = "5"
fs_extra = "1"
sequoia-openpgp = { version = "2", default-features = false }
sequoia-autocrypt = { version = "0.26", default-features = false }
sequoia-net = { version = "0.30", default-features = false }
sequoia-policy-config = "0.8"
anyhow = "1.0.18"
chrono = "0.4.10"
clap = { version = "4", features = ["derive", "env", "string", "wrap_help"] }
clap_lex = { version = "0.7", default-features = false }
futures-util = "0.3"
gethostname = { version = ">=0.4, <0.6" }
humantime = "2"
indicatif = "0.17"
reqwest = { version = ">=0.12, <0.13", features = ["hickory-dns", "stream"] }
sequoia = { path = "../lib", default-features = false, features = ["clap"] }
tempfile = "3.1"
thiserror = { version = ">=1, <3" }
tokio = { version = "1.13.1" }
toml_edit = { version = "0.22", default-features = false, features = ["display", "parse"] }
regex = "1"
rpassword = "7.0"
rusqlite = ">=0.31, <0.33"
serde = { version = "1.0.137", features = ["derive"] }
terminal_size = ">=0.2.6, <0.5"
termcolor = "1.2.0"
textwrap = { version = ">=0.15, <0.17", default-features = false, features = ["smawk", "unicode-width"] }
typenum = "1"

# This is for subplot only.  If you don't enable the subplot feature,
# feel free to patch it out.
subplotlib = { version = ">=0.11, <0.13", optional = true }
culpa = { version = "1", optional = true }

[build-dependencies]
anyhow = "1.0.18"
clap = { version = "4", features = ["derive", "env", "string", "wrap_help"] }
clap_complete = "4"
clap_lex = { version = "0.7", default-features = false }
chrono = "0.4.38"
dirs = "5"
roff = "0.2.1"
serde = { version = "1.0.137", features = ["derive"] }
sequoia = { path = "../lib", default-features = false, features = ["clap"] }
sequoia-man = "0.3"
sequoia-openpgp = { version = "2", default-features = false }
sequoia-net = { version = "0.30", default-features = false }
textwrap = ">=0.15, <0.17"
typenum = "1"
cfg-if = "1"
terminal_size = ">=0.2.6, <0.5"

# This is for subplot only.  If you don't enable the subplot feature,
# feel free to patch it out.
subplot-build = { version = ">=0.11, <0.13", optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = ">=2, <4"
regex = "1"
libc = "0.2"

[[bin]]
name = "sq"
path = "src/main.rs"
bench = false

[[test]]
name = "sq-subplot"
path = "tests/sq-subplot.rs"
required-features = ["subplot"]

[features]
default = [
    "sequoia/default",
]
crypto-nettle = ["sequoia/crypto-nettle"]
crypto-openssl = ["sequoia/crypto-openssl"]
crypto-botan = ["sequoia/crypto-botan"]
crypto-botan2 = ["sequoia/crypto-botan2"]
crypto-cng = ["sequoia/crypto-cng"]
crypto-rust = ["sequoia/crypto-rust"]
subplot = ["culpa", "subplot-build", "subplotlib"]

[target.'cfg(not(windows))'.dev-dependencies]
# Enables a crypto backend for the tests:
sequoia-openpgp = { version = "2", default-features = false, features = ["crypto-nettle", "__implicit-crypto-backend-for-tests"]  }

[target.'cfg(windows)'.dev-dependencies]
# Enables a crypto backend for the tests:
sequoia-openpgp = { version = "2", default-features = false, features = ["crypto-cng", "__implicit-crypto-backend-for-tests"] }

[package.metadata.docs.rs]
# Enables a crypto backend for the docs.rs generation:
features = ["sequoia-openpgp/default"]
